--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
       href="https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap"
       rel="stylesheet"
     />
-
+    <!-- bootstrap -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
+    />
+
+    <!-- Dev icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.8.2/devicon.min.css"
     />
 
     <link rel="stylesheet" href="./styles.css" />
@@ -24,54 +30,167 @@
       <span id="name">Scott Lai</span>
       <div id="social-medias">
         <a href="https://github.com/scottdlai">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="2rem"
-            height="2rem"
-            fill="black"
-            class="bi bi-github"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
-            />
-          </svg>
+          <i class="devicon-github-original colored"></i>
         </a>
         <a href="https://www.linkedin.com/in/tuong-lai/">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="2rem"
-            height="2rem"
-            fill="var(--primary)"
-            class="bi bi-linkedin"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"
-            />
-          </svg>
+          <i class="devicon-linkedin-plain colored"></i>
         </a>
       </div>
     </nav>
     <section>
-      <p>Hi, I'm Scott Lai. Welcome to my personal website 😀</p>
+      <p>Hi, I'm Scott Lai. Welcome to my personal website!</p>
     </section>
     <section>
       <span class="heading-2">Education</span>
       <p>
         I am doing Computer Science at British Columbia Insittute of Technology.
-        I'm currently taking the Programming Paradigm option
+        I'm currently taking the Programming Paradigm option.
       </p>
+      <a
+        href="https://www.bcit.ca/programs/computer-systems-technology-diploma-full-time-5500dipma/"
+      >
+        <img class="thumbnail" src="./images/bcit.png" alt="Card image cap" />
+      </a>
+      <span class="placeholder-text">Class of 2021</span>
     </section>
     <section>
       <span class="heading-2">Skills</span>
-      <p></p>
+      <p>
+        At BCIT, I learnt about all three major paradigms in programming
+        (Object-oriented, Procedural and Functional).
+      </p>
+      <span class="heading-4">Programming Languages*</span>
+      <div class="my-container">
+        <a href="https://www.java.com/en/">
+          <i class="devicon-java-plain-wordmark colored skills"></i>
+        </a>
+        <a href="https://ocaml.org/">
+          <img
+            src="https://raw.githubusercontent.com/ocaml/ocaml-logo/master/Colour/PNG/colour-transparent-icon.png"
+            alt="OCaml"
+            class="skills-img"
+          />
+        </a>
+        <a href="https://www.python.org/">
+          <i class="devicon-python-plain colored skills"></i>
+        </a>
+        <a href="https://www.typescriptlang.org/">
+          <i class="devicon-typescript-plain colored skills"></i>
+        </a>
+        <a href="https://www.javascript.com/">
+          <i class="devicon-javascript-plain colored skills"></i>
+        </a>
+        <a href="https://www.cplusplus.com/">
+          <i class="devicon-cplusplus-plain colored skills"></i>
+        </a>
+        <a href="https://www.tutorialspoint.com/cprogramming/index.htm">
+          <i class="devicon-c-plain colored skills"></i>
+        </a>
+      </div>
+      <p class="placeholder-text">
+        * I believe that knowing the fundementals of programming fundementals is
+        more important than trying to learn different syntaxes. As knowing the
+        fundementals concepts can help learn different languages faster.
+      </p>
+      <span class="heading-4">Frontend Frameworks</span>
+      <div class="my-container">
+        <a href="https://reactjs.org/">
+          <i class="devicon-react-original colored skills"></i>
+        </a>
+        <a href="https://svelte.dev/">
+          <img
+            src="https://raw.githubusercontent.com/sveltejs/svelte/29052aba7d0b78316d3a52aef1d7ddd54fe6ca84/site/static/logo.svg"
+            alt="Svelte"
+            class="skills-img"
+          />
+        </a>
+        <a href="https://getbootstrap.com/">
+          <i class="devicon-bootstrap-plain colored skills"></i>
+        </a>
+      </div>
+      <span class="heading-4">Databases</span>
+      <div class="my-container">
+        <a href="https://firebase.google.com/">
+          <img
+            src="./images/Firebase_Logo_Vertical_Lockup.png"
+            alt="Firebase"
+            class="skills-img"
+          />
+        </a>
+        <a href="https://www.mysql.com/">
+          <i class="devicon-mysql-plain-wordmark colored skills"></i>
+        </a>
+      </div>
+      <span class="heading-4">Others</span>
+      <div class="my-container">
+        <i class="devicon-bash-plain colored skills"></i>
+      </div>
     </section>
+    <section>
+      <span class="heading-2">Projects</span>
+      <p>I like to learn about algorithms and visualize them.</p>
+      <div class="container">
+        <div class="row">
+          <div class="col-md">
+            <a href="https://scottdlai.github.io/sorting-animation/">
+              <img
+                src="https://raw.githubusercontent.com/scottdlai/sorting-animation/master/assets/website.png"
+                alt="Sorting Animation"
+                class="project"
+              />
+            </a>
+            <span class="placeholder-text">Sorting Animation</span>
+          </div>
+          <div class="col-md">
+            <a href="https://scottdlai.github.io/a-star-pathfinding/">
+              <img
+                src="https://raw.githubusercontent.com/scottdlai/a-star-pathfinding/master/demo.png"
+                alt="A* Demo"
+                class="project"
+              />
+            </a>
+            <span class="placeholder-text"> A* Visualization</span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md">
+            <a href="https://scottdlai.github.io/conway-game-of-life/">
+              <img
+                src="./images/game-of-life.png"
+                alt="Conway's Game of Life"
+                class="project"
+              />
+            </a>
+            <span class="placeholder-text">
+              Conway's Game of Life Simulation
+            </span>
+          </div>
+          <div class="col-md">
+            <a href="https://scottdlai.github.io/Tic-Tac-Toe-AI/">
+              <img
+                src="./images/tic-tac-toe.png"
+                alt="Tic Tac Toe bot"
+                class="project"
+              />
+            </a>
+            <span class="placeholder-text">Tic Tac Toe bot</span>
+          </div>
+        </div>
+      </div>
 
-    <!-- Bootstrap -->
+      <span class="heading-4">Other</span>
+      <p>
+        You can check out my other projects on my
+        <a href="https://github.com/scottdlai">Github</a>
+      </p>
+    </section>
+    <!-- Empty footer -->
+    <footer style="height: 64px"></footer>
+
+    <!-- Bootstap -->
     <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      src="ttps://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"
     ></script>
     <script
