--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section>
       <span class="heading-2">Education</span>
       <p>
-        I am doing Computer Science at British Columbia Insittute of Technology.
+        I am doing Computer Science at British Columbia Institute of Technology.
         I'm currently taking the Programming Paradigm option.
       </p>
       <a
