Added more skills to `Others` section.

--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
       <span class="heading-4">Others</span>
       <div class="my-container">
         <i class="devicon-bash-plain colored skills"></i>
+        <i class="devicon-html5-plain colored skills"></i>
+        <i class="devicon-css3-plain colored skills"></i>
+        <i class="devicon-git-plain colored skills"></i>
       </div>
     </section>
     <section>
