Added links to official websites.

--- a/index.html
+++ b/index.html
@@ -123,10 +123,18 @@
       </div>
       <span class="heading-4">Others</span>
       <div class="my-container">
-        <i class="devicon-bash-plain colored skills"></i>
-        <i class="devicon-html5-plain colored skills"></i>
-        <i class="devicon-css3-plain colored skills"></i>
-        <i class="devicon-git-plain colored skills"></i>
+        <a href="https://en.wikipedia.org/wiki/Shell_script">
+          <i class="devicon-bash-plain colored skills"></i>
+        </a>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5">
+          <i class="devicon-html5-plain colored skills"></i>
+        </a>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/CSS">
+          <i class="devicon-css3-plain colored skills"></i>
+        </a>
+        <a href="https://git-scm.com/">
+          <i class="devicon-git-plain colored skills"></i>
+        </a>
       </div>
     </section>
     <section>
