Added explanations for databases section.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <i class="devicon-bootstrap-plain colored skills"></i>
         </a>
       </div>
-      <span class="heading-4">Databases</span>
+      <span class="heading-4">Databases*</span>
       <div class="my-container">
         <a href="https://firebase.google.com/">
           <img
@@ -121,6 +121,11 @@
           <i class="devicon-mysql-plain-wordmark colored skills"></i>
         </a>
       </div>
+      <p class="placeholder-text">
+        * Just like programming languages, I believe that learning the
+        fundementals behind each database implementation is more important than
+        trying to learn different vendors.
+      </p>
       <span class="heading-4">Others</span>
       <div class="my-container">
         <a href="https://en.wikipedia.org/wiki/Shell_script">
