Fixed some structure.

--- a/index.html
+++ b/index.html
@@ -192,13 +192,16 @@
             <span class="placeholder-text">Tic Tac Toe bot</span>
           </div>
         </div>
+        <div class="row">
+          <div class="col">
+            <span class="heading-4">Other</span>
+            <p>
+              You can check out my other projects on my
+              <a href="https://github.com/scottdlai">Github</a>
+            </p>
+          </div>
+        </div>
       </div>
-
-      <span class="heading-4">Other</span>
-      <p>
-        You can check out my other projects on my
-        <a href="https://github.com/scottdlai">Github</a>
-      </p>
     </section>
     <!-- Empty footer -->
     <footer style="height: 64px"></footer>
