Fixed bugs where bcit image takes whole width.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       >
         <img class="thumbnail" src="./images/bcit.png" alt="Card image cap" />
       </a>
-      <span class="placeholder-text">Class of 2021</span>
+      <p class="placeholder-text">Class of 2021</p>
     </section>
     <section>
       <span class="heading-2">Skills</span>
