Added links to sections.

--- a/index.html
+++ b/index.html
@@ -40,9 +40,14 @@
       </div>
     </nav>
     <section>
-      <p>Hi, I'm Scott Lai. Welcome to my personal website!</p>
+      <p>
+        Hi there 👋<br />
+        Welcome to my personal website! Here, you can find out about my
+        <a href="#education">education</a>, <a href="#skills">skills</a>, and
+        <a href="#projects">projects</a>.
+      </p>
     </section>
-    <section>
+    <section id="education">
       <span class="heading-2">Education</span>
       <p>
         I am doing Computer Science at British Columbia Institute of Technology.
@@ -55,7 +60,7 @@
       </a>
       <p class="placeholder-text">Class of 2021</p>
     </section>
-    <section>
+    <section id="skills">
       <span class="heading-2">Skills</span>
       <p>
         At BCIT, I learnt about all three major paradigms in programming
@@ -144,7 +149,7 @@
         </a>
       </div>
     </section>
-    <section>
+    <section id="projects">
       <span class="heading-2">Projects</span>
       <p>I like to learn about algorithms and visualize them.</p>
       <div class="container">
