Added more details about education.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
       <span class="heading-2">Education</span>
       <p>
         I am doing Computer Science at British Columbia Institute of Technology.
-        I'm currently taking the Programming Paradigm option.
+        I'm currently taking the Programming Paradigm option. It mainly focuses
+        on functional programming languages and their applications. I realy like
+        my option so far.
       </p>
       <a
         href="https://www.bcit.ca/programs/computer-systems-technology-diploma-full-time-5500dipma/"
