Added id to the intro section.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </a>
       </div>
     </nav>
-    <section>
+    <section id="intro">
       <p>
         Hi there 👋<br />
         Welcome to my personal website! Here, you can find out about my
