Add more details about project section.

--- a/index.html
+++ b/index.html
@@ -153,7 +153,13 @@
     </section>
     <section id="projects">
       <span class="heading-2">Projects</span>
-      <p>I like to learn about algorithms and visualize them.</p>
+      <p>
+        Here are some of the project that I am most proud of. I like reading
+        about famous algorithms and visualize them. In the future, I would like
+        to create my own programming language.<br />You can check out more of my
+        projects on my
+        <a href="https://github.com/scottdlai?tab=repositories">Github</a>.
+      </p>
       <div class="container">
         <div class="row">
           <div class="col-md">
