--- a/index.html
+++ b/index.html
@@ -207,21 +207,13 @@
             <span class="placeholder-text">Tic Tac Toe bot</span>
           </div>
         </div>
-        <div class="row">
-          <div class="col">
-            <span class="heading-4">Other</span>
-            <p>
-              You can check out my other projects on my
-              <a href="https://github.com/scottdlai">Github</a>
-            </p>
-          </div>
-        </div>
       </div>
     </section>
     <!-- Empty footer -->
     <footer style="height: 64px"></footer>
 
     <!-- Bootstap -->
+    <!-- JQuery, Popper, and then bootstrap -->
     <script
       src="ttps://code.jquery.com/jquery-3.3.1.slim.min.js"
       integity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
