--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
       crossorigin="anonymous"
     />
 
+    <!-- bootstrap icon -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
+
     <!-- Dev icons -->
     <link
       rel="stylesheet"
@@ -210,7 +216,11 @@
       </div>
     </section>
     <!-- Empty footer -->
-    <footer style="height: 64px"></footer>
+    <footer>
+      <span class="placeholder-text"
+        ><i class="bi bi-geo-alt-fill"></i> Vancouver, BC
+      </span>
+    </footer>
 
     <!-- Bootstap -->
     <!-- JQuery, Popper, and then bootstrap -->
