Make greetings into heading 4.

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       </div>
     </nav>
     <section id="intro">
+      <span class="heading-4">Hi there 👋</span>
       <p>
-        Hi there 👋<br />
         Welcome to my personal website! Here, you can find out about my
         <a href="#education">education</a>, <a href="#skills">skills</a>, and
         <a href="#projects">projects</a>.
