Underline text in the footer.

--- a/index.html
+++ b/index.html
@@ -217,8 +217,11 @@
     </section>
     <!-- Empty footer -->
     <footer>
-      <span class="placeholder-text"
-        ><i class="bi bi-geo-alt-fill"></i> Vancouver, BC
+      <span
+        class="placeholder-text"
+        style="border-bottom: 2px solid var(--placeholder)"
+      >
+        <i class="bi bi-geo-alt-fill"></i> Vancouver, BC
       </span>
     </footer>
 
