Center projects' names.

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
       </p>
       <div class="container">
         <div class="row">
-          <div class="col-md">
+          <div class="col-md project-container">
             <a href="https://scottdlai.github.io/sorting-animation/">
               <img
                 src="https://raw.githubusercontent.com/scottdlai/sorting-animation/master/assets/website.png"
@@ -178,7 +178,7 @@
             </a>
             <span class="placeholder-text">Sorting Animation</span>
           </div>
-          <div class="col-md">
+          <div class="col-md project-container">
             <a href="https://scottdlai.github.io/a-star-pathfinding/">
               <img
                 src="https://raw.githubusercontent.com/scottdlai/a-star-pathfinding/master/demo.png"
@@ -190,7 +190,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md">
+          <div class="col-md project-container">
             <a href="https://scottdlai.github.io/conway-game-of-life/">
               <img
                 src="./images/game-of-life.png"
@@ -202,7 +202,7 @@
               Conway's Game of Life Simulation
             </span>
           </div>
-          <div class="col-md">
+          <div class="col-md project-container">
             <a href="https://scottdlai.github.io/Tic-Tac-Toe-AI/">
               <img
                 src="./images/tic-tac-toe.png"
