Changed to devicon.

--- a/index.html
+++ b/index.html
@@ -80,14 +80,13 @@
           <i class="devicon-java-plain-wordmark colored skills"></i>
         </a>
         <a href="https://ocaml.org/">
-          <img
-            src="https://raw.githubusercontent.com/ocaml/ocaml-logo/master/Colour/PNG/colour-transparent-icon.png"
-            alt="OCaml"
-            class="skills-img"
-          />
+          <i class="devicon-ocaml-plain colored skills"></i>
         </a>
         <a href="https://www.python.org/">
           <i class="devicon-python-plain colored skills"></i>
+        </a>
+        <a href="https://elixir-lang.org/">
+          <i class="devicon-elixir-plain colored skills"></i>
         </a>
         <a href="https://www.typescriptlang.org/">
           <i class="devicon-typescript-plain colored skills"></i>
@@ -125,15 +124,14 @@
       </div>
       <span class="heading-4">Databases*</span>
       <div class="my-container">
-        <a href="https://firebase.google.com/">
-          <img
-            src="./images/Firebase_Logo_Vertical_Lockup.png"
-            alt="Firebase"
-            class="skills-img"
-          />
+        <a href="https://www.postgresql.org/">
+          <i class="devicon-postgresql-plain colored skills"></i>
         </a>
         <a href="https://www.mysql.com/">
           <i class="devicon-mysql-plain-wordmark colored skills"></i>
+        </a>
+        <a href="https://firebase.google.com/">
+          <i class="devicon-firebase-plain colored skills"></i>
         </a>
       </div>
       <p class="placeholder-text">
