Added hackathons section.

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </a>
       </div>
     </nav>
+
     <section id="intro">
       <span class="heading-4">Hi there 👋</span>
       <p>
@@ -68,6 +69,7 @@
       </a>
       <p class="placeholder-text">Class of 2021</p>
     </section>
+
     <section id="skills">
       <span class="heading-2">Skills</span>
       <p>
@@ -155,6 +157,28 @@
         </a>
       </div>
     </section>
+
+    <section id="hackathons">
+      <span class="heading-2">Hackathons</span>
+      <p>
+        Here are some of the hackathons that I've attended and won some prices.
+        I would love to attend more in the future :D
+      </p>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-md project-container">
+            <a href="https://devpost.com/software/learnit-ol6net">
+              <img src="./images/learnIT.png" alt="LearnIT" class="project" />
+            </a>
+            <span class="placeholder-text">Hack The Break hackathon</span>
+          </div>
+
+          <div class="col-md project-container"></div>
+        </div>
+      </div>
+    </section>
+
     <section id="projects">
       <span class="heading-2">Projects</span>
       <p>
@@ -213,6 +237,7 @@
         </div>
       </div>
     </section>
+
     <footer>
       <span
         class="placeholder-text"
