Added link to hackathon in summary.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <title>Scott Lai</title>
   </head>
+
   <body>
     <nav>
       <span id="name">Scott Lai</span>
@@ -50,7 +51,8 @@
       <span class="heading-4">Hi there 👋</span>
       <p>
         Welcome to my personal website! Here, you can find out about my
-        <a href="#education">education</a>, <a href="#skills">skills</a>, and
+        <a href="#education">education</a>, <a href="#skills">skills</a>,
+        <a href="#hackathons">hackathons</a>, and
         <a href="#projects">projects</a>.
       </p>
     </section>
