--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
     <!-- Dev icons -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.10.1/devicon.min.css"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.11.0/devicon.min.css"
     />
+
 
     <link rel="stylesheet" href="./styles.css" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
@@ -136,6 +137,9 @@
         </a>
         <a href="https://firebase.google.com/">
           <i class="devicon-firebase-plain colored skills"></i>
+        </a>
+        <a href="https://www.microsoft.com/en-ca/sql-server/sql-server-2019">
+          <i class="devicon-microsoftsqlserver-plain-wordmark colored skills"></i>
         </a>
       </div>
       <p class="placeholder-text">
