--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.11.0/devicon.min.css"
     />
 
-
     <link rel="stylesheet" href="./styles.css" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <title>Scott Lai</title>
@@ -139,7 +138,9 @@
           <i class="devicon-firebase-plain colored skills"></i>
         </a>
         <a href="https://www.microsoft.com/en-ca/sql-server/sql-server-2019">
-          <i class="devicon-microsoftsqlserver-plain-wordmark colored skills"></i>
+          <i
+            class="devicon-microsoftsqlserver-plain-wordmark colored skills"
+          ></i>
         </a>
       </div>
       <p class="placeholder-text">
