--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Dev icons -->
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.11.0/devicon.min.css"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
     />
 
     <link rel="stylesheet" href="./styles.css" />
