Move Typescript and Javascript to the top.

--- a/index.html
+++ b/index.html
@@ -80,23 +80,26 @@
       </p>
       <span class="heading-4">Programming Languages*</span>
       <div class="my-container">
-        <a href="https://www.java.com/en/">
-          <i class="devicon-java-plain-wordmark colored skills"></i>
-        </a>
-        <a href="https://ocaml.org/">
-          <i class="devicon-ocaml-plain colored skills"></i>
-        </a>
-        <a href="https://www.python.org/">
-          <i class="devicon-python-plain colored skills"></i>
-        </a>
-        <a href="https://elixir-lang.org/">
-          <i class="devicon-elixir-plain colored skills"></i>
-        </a>
         <a href="https://www.typescriptlang.org/">
           <i class="devicon-typescript-plain colored skills"></i>
         </a>
         <a href="https://www.javascript.com/">
           <i class="devicon-javascript-plain colored skills"></i>
+        </a>
+        <a href="https://ocaml.org/">
+          <i class="devicon-ocaml-plain colored skills"></i>
+        </a>
+        <a href="https://elixir-lang.org/">
+          <i class="devicon-elixir-plain colored skills"></i>
+        </a>
+        <a href="https://www.golang.org">
+          <i class="devicon-go-line colored skills"></i>
+        </a>
+        <a href="https://www.java.com/en/">
+          <i class="devicon-java-plain colored skills"></i>
+        </a>
+        <a href="https://www.python.org/">
+          <i class="devicon-python-plain colored skills"></i>
         </a>
         <a href="https://www.cplusplus.com/">
           <i class="devicon-cplusplus-plain colored skills"></i>
