Added Express and Material UI.

--- a/index.html
+++ b/index.html
@@ -113,8 +113,11 @@
         more important than trying to learn different syntaxes. As knowing the
         fundementals concepts can help learn different languages faster.
       </p>
-      <span class="heading-4">Frontend Frameworks</span>
+      <span class="heading-4">Web Frameworks and Libraries</span>
       <div class="my-container">
+        <a href="http://expressjs.com">
+          <i class="devicon-express-original colored skills"></i>
+        </a>
         <a href="https://reactjs.org/">
           <i class="devicon-react-original colored skills"></i>
         </a>
@@ -127,6 +130,9 @@
         </a>
         <a href="https://getbootstrap.com/">
           <i class="devicon-bootstrap-plain colored skills"></i>
+        </a>
+        <a href="https://material-ui.com/">
+          <i class="devicon-materialui-plain colored skills"></i>
         </a>
       </div>
       <span class="heading-4">Databases*</span>
