Changed icon to plain.

--- a/index.html
+++ b/index.html
@@ -141,15 +141,13 @@
           <i class="devicon-postgresql-plain colored skills"></i>
         </a>
         <a href="https://www.mysql.com/">
-          <i class="devicon-mysql-plain-wordmark colored skills"></i>
+          <i class="devicon-mysql-plain colored skills"></i>
+        </a>
+        <a href="https://www.microsoft.com/en-ca/sql-server/sql-server-2019">
+          <i class="devicon-microsoftsqlserver-plain colored skills"></i>
         </a>
         <a href="https://firebase.google.com/">
           <i class="devicon-firebase-plain colored skills"></i>
-        </a>
-        <a href="https://www.microsoft.com/en-ca/sql-server/sql-server-2019">
-          <i
-            class="devicon-microsoftsqlserver-plain-wordmark colored skills"
-          ></i>
         </a>
       </div>
       <p class="placeholder-text">
