--- a/index.html
+++ b/index.html
@@ -30,7 +30,24 @@
     />
 
     <link rel="stylesheet" href="./styles.css" />
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png"
+    />
+    <link rel="manifest" href="./site.webmanifest" />
     <title>Scott Lai</title>
   </head>
 
