Added Phoenix in skills.

--- a/index.html
+++ b/index.html
@@ -132,8 +132,11 @@
       </p>
       <span class="heading-4">Web Frameworks and Libraries</span>
       <div class="my-container">
-        <a href="http://expressjs.com">
+        <a href="https://expressjs.com">
           <i class="devicon-express-original colored skills"></i>
+        </a>
+        <a href="https://www.phoenixframework.org/">
+          <i class="devicon-phoenix-plain colored skills"></i>
         </a>
         <a href="https://reactjs.org/">
           <i class="devicon-react-original colored skills"></i>
