Added digital ocean.

--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@
         <a href="https://en.wikipedia.org/wiki/Shell_script">
           <i class="devicon-bash-plain colored skills"></i>
         </a>
+        <a href="https://www.digitalocean.com/">
+          <i class="devicon-digitalocean-plain colored skills"></i>
+        </a>
         <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5">
           <i class="devicon-html5-plain colored skills"></i>
         </a>
