Updated my education section.

--- a/index.html
+++ b/index.html
@@ -77,10 +77,14 @@
     <section id="education">
       <span class="heading-2">Education</span>
       <p>
-        I am doing Computer Science at British Columbia Institute of Technology.
-        I'm currently taking the Programming Paradigm option. It mainly focuses
-        on functional programming languages and their applications. I realy like
-        my option so far.
+        I just graduated from BCIT's Computer System Technology program.
+        Overall, it was an awesome experience. I met a lot of cool people and
+        learnt a lot of interesting things.
+      </p>
+      <p>
+        I took the Programming Paradigm option in my second year. It teached
+        OCaml, Elixir, and Golang. In the end, it really changed my coding
+        styles and practices.
       </p>
       <a
         href="https://www.bcit.ca/programs/computer-systems-technology-diploma-full-time-5500dipma/"
