Added link to resume.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@
         Welcome to my personal website! Here, you can find out about my
         <a href="#education">education</a>, <a href="#skills">skills</a>,
         <a href="#hackathons">hackathons</a>, and
-        <a href="#projects">projects</a>.
+        <a href="#projects">projects</a>. I'm currently looking for
+        opportunities to work as a full stack software developer (React, and
+        Express or Phoenix). Here's my <a href="./resume.pdf">resume</a>.
       </p>
     </section>
 
