Added work experience section.

--- a/index.html
+++ b/index.html
@@ -96,6 +96,43 @@
       <p class="placeholder-text">Class of 2021</p>
     </section>
 
+    <section id="experience">
+      <span class="heading-2">Work Experience</span>
+      <p>
+        In BCIT's second year, I took 2 Industry-Sponsored Student Projects
+        which provided me valuable experience working with clients from
+        different industries with different needs. In both projects, my 2
+        clients were different departments from BCIT.
+      </p>
+      <div class="container">
+        <div class="row">
+          <div class="col-md project-container">
+            <img
+              src="./images/bcit-nurse.png"
+              alt="Screenshot of Nursing Department course evaluation application"
+              class="project"
+            />
+            <span class="placeholder-text">
+              Full-stack application for staffs from Nursing Department to
+              manage their courses' evaluations.
+            </span>
+          </div>
+          <div class="col-md project-container">
+            <img
+              src="./images/isep.png"
+              alt="Screenshot of ISEP student-tracking application"
+              class="project"
+            />
+            <span class="placeholder-text">
+              Web application for staffs from BCIT's International Students
+              Entry Program to manage their students' information and track
+              their progress throughout the program.
+            </span>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section id="projects">
       <span class="heading-2">Projects</span>
       <p>
