--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
     <section id="experience">
       <span class="heading-2">Work Experience</span>
       <p>
-        In BCIT's second year, I took 2 Industry-Sponsored Student Projects
+        In BCIT's second year, I took two Industry-Sponsored Student Projects
         which provided me valuable experience working with clients from
-        different industries with different needs. In both projects, my 2
+        different industries with different needs. In both projects, my two
         clients were different departments from BCIT.
       </p>
       <div class="container">
