Added meta description.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Hi, I'm Scott Lai and welcome to my personal website!"
+    />
     <!-- Roboto font -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -29,7 +33,10 @@
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css"
     />
 
+    <!-- Custom css -->
     <link rel="stylesheet" href="./styles.css" />
+
+    <!-- Favicons -->
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -48,6 +55,7 @@
       href="./favicon-16x16.png"
     />
     <link rel="manifest" href="./site.webmanifest" />
+
     <title>Scott Lai</title>
   </head>
 
