--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       >
         <img class="thumbnail" src="./images/bcit.png" alt="Card image cap" />
       </a>
-      <p class="placeholder-text">Class of 2021</p>
+      <p class="placeholder-text">Class of 2021 - GPA: 91%</p>
     </section>
 
     <section id="experience">
