--- a/index.html
+++ b/index.html
@@ -272,6 +272,10 @@
         <a href="https://reactjs.org/">
           <i class="devicon-react-original colored skills"></i>
         </a>
+        <a href="https://vuejs.org/">
+          <i class="devicon-vuejs-plain colored skills"></i>
+        </a>
+
         <a href="https://svelte.dev/">
           <img
             src="https://raw.githubusercontent.com/sveltejs/svelte/29052aba7d0b78316d3a52aef1d7ddd54fe6ca84/site/static/logo.svg"
