Convert svelte to devicon.

--- a/index.html
+++ b/index.html
@@ -276,11 +276,7 @@
           <i class="devicon-vuejs-plain colored skills"></i>
         </a>
         <a href="https://svelte.dev/">
-          <img
-            src="https://raw.githubusercontent.com/sveltejs/svelte/29052aba7d0b78316d3a52aef1d7ddd54fe6ca84/site/static/logo.svg"
-            alt="Svelte"
-            class="skills-img"
-          />
+          <i class="devicon-svelte-plain colored skills"></i>
         </a>
         <a href="https://getbootstrap.com/">
           <i class="devicon-bootstrap-plain colored skills"></i>
