--- a/index.html
+++ b/index.html
@@ -79,23 +79,28 @@
         Welcome to my personal website! Here, you can find out about my
         <a href="#education">education</a>, <a href="#skills">skills</a>,
         <a href="#hackathons">hackathons</a>, and
-        <a href="#projects">projects</a>. I'm currently looking for
-        opportunities to work as a full stack software developer (React, and
-        Express or Phoenix). Here's my <a href="./resume.pdf">resume</a>.
+        <a href="#projects">projects</a>. I'm currently working for
+        <a
+          href="http://aws.amazon.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          >@aws</a
+        >. Though I'm open to new opportunities, so feel free to reach out to me
+        :D. Here's my <a href="./resume.pdf">resume</a>.
       </p>
     </section>
 
     <section id="education">
       <span class="heading-2">Education</span>
       <p>
-        I just graduated from BCIT's Computer System Technology program.
-        Overall, it was an awesome experience. I met a lot of cool people and
-        learnt a lot of interesting things.
+        I graduated from BCIT's Computer System Technology program back in June
+        2021. Overall, it was an awesome experience. I met a lot of cool people
+        and learnt a lot of interesting things.
       </p>
       <p>
-        I took the Programming Paradigm option in my second year. It teached
-        OCaml, Elixir, and Golang. In the end, it really changed my coding
-        styles and practices.
+        I took the Programming Paradigm option in my second year. I used OCaml,
+        Elixir, and Golang. In the end, it really changed my coding styles and
+        practices.
       </p>
       <a
         href="https://www.bcit.ca/programs/computer-systems-technology-diploma-full-time-5500dipma/"
@@ -108,36 +113,48 @@
     <section id="experience">
       <span class="heading-2">Work Experience</span>
       <p>
-        In BCIT's second year, I took two Industry-Sponsored Student Projects
-        which provided me valuable experience working with clients from
-        different industries with different needs. In both projects, my two
-        clients were different departments from BCIT.
+        I'm currently working at
+        <a
+          href="http://aws.amazon.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          >@aws</a
+        >
+        as a backend engineer on their EC2 Networking team. Previously, I was a
+        fullstack developer at
+        <a
+          href="http://gratifypay.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          >@gratifypay</a
+        >
+        developing their consumer and merchant portals. Back in BCIT, I also had
+        the chance to work on two Industry-Sponsored Student Projects.
       </p>
       <div class="container">
-        <div class="row">
-          <div class="col-md project-container">
+        <div class="my-container flex-gap-10px">
+          <a
+            href="http://aws.amazon.com"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <i
+              class="devicon-amazonwebservices-plain-wordmark colored companies"
+            ></i>
+          </a>
+
+          <a
+            href="http://gratifypay.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="align-self-center"
+          >
             <img
-              src="./images/bcit-nurse.png"
-              alt="Screenshot of Nursing Department course evaluation application"
-              class="project"
+              src="./images/gratify-logo.png"
+              alt="Gratify Pay's logo"
+              class="gratify-logo"
             />
-            <span class="placeholder-text">
-              Full-stack application for staffs from Nursing Department to
-              manage their courses' evaluations.
-            </span>
-          </div>
-          <div class="col-md project-container">
-            <img
-              src="./images/isep.png"
-              alt="Screenshot of ISEP student-tracking application"
-              class="project"
-            />
-            <span class="placeholder-text">
-              Web application for staffs from BCIT's International Students
-              Entry Program to manage their students' information and track
-              their progress throughout the program.
-            </span>
-          </div>
+          </a>
         </div>
       </div>
     </section>
