fix: make links open in new tab

--- a/index.html
+++ b/index.html
@@ -64,10 +64,18 @@
     <nav>
       <span id="name">Scott Lai</span>
       <div id="social-medias">
-        <a href="https://github.com/scottdlai">
+        <a
+          href="https://github.com/scottdlai"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-github-original colored"></i>
         </a>
-        <a href="https://www.linkedin.com/in/tuong-lai/">
+        <a
+          href="https://www.linkedin.com/in/tuong-lai/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-linkedin-plain colored"></i>
         </a>
       </div>
@@ -104,6 +112,8 @@
       </p>
       <a
         href="https://www.bcit.ca/programs/computer-systems-technology-diploma-full-time-5500dipma/"
+        target="_blank"
+        rel="noopener noreferrer"
       >
         <img class="thumbnail" src="./images/bcit.png" alt="Card image cap" />
       </a>
@@ -171,7 +181,11 @@
       <div class="container">
         <div class="row">
           <div class="col-md project-container">
-            <a href="https://scottdlai.github.io/sorting-animation/">
+            <a
+              href="https://scottdlai.github.io/sorting-animation/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <img
                 src="https://raw.githubusercontent.com/scottdlai/sorting-animation/master/assets/website.png"
                 alt="Sorting Animation"
@@ -181,7 +195,11 @@
             <span class="placeholder-text">Sorting Animation</span>
           </div>
           <div class="col-md project-container">
-            <a href="https://scottdlai.github.io/a-star-pathfinding/">
+            <a
+              href="https://scottdlai.github.io/a-star-pathfinding/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <img
                 src="https://raw.githubusercontent.com/scottdlai/a-star-pathfinding/master/demo.png"
                 alt="A* Demo"
@@ -193,7 +211,11 @@
         </div>
         <div class="row">
           <div class="col-md project-container">
-            <a href="https://scottdlai.github.io/conway-game-of-life/">
+            <a
+              href="https://scottdlai.github.io/conway-game-of-life/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <img
                 src="./images/game-of-life.png"
                 alt="Conway's Game of Life"
@@ -205,7 +227,11 @@
             </span>
           </div>
           <div class="col-md project-container">
-            <a href="https://scottdlai.github.io/Tic-Tac-Toe-AI/">
+            <a
+              href="https://scottdlai.github.io/Tic-Tac-Toe-AI/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <img
                 src="./images/tic-tac-toe.png"
                 alt="Tic Tac Toe bot"
@@ -227,7 +253,11 @@
       <div class="container">
         <div class="row">
           <div class="col-md project-container">
-            <a href="https://devpost.com/software/learnit-ol6net">
+            <a
+              href="https://devpost.com/software/learnit-ol6net"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <img src="./images/learnIT.png" alt="LearnIT" class="project" />
             </a>
             <span class="placeholder-text">Hack The Break hackathon</span>
@@ -245,31 +275,63 @@
       </p>
       <span class="heading-4">Programming Languages*</span>
       <div class="my-container">
-        <a href="https://www.typescriptlang.org/">
+        <a
+          href="https://www.typescriptlang.org/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-typescript-plain colored skills"></i>
         </a>
-        <a href="https://www.javascript.com/">
+        <a
+          href="https://www.javascript.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-javascript-plain colored skills"></i>
         </a>
-        <a href="https://ocaml.org/">
-          <i class="devicon-ocaml-plain colored skills"></i>
-        </a>
-        <a href="https://elixir-lang.org/">
-          <i class="devicon-elixir-plain colored skills"></i>
-        </a>
-        <a href="https://www.golang.org">
-          <i class="devicon-go-line colored skills"></i>
-        </a>
-        <a href="https://www.python.org/">
-          <i class="devicon-python-plain colored skills"></i>
-        </a>
-        <a href="https://www.java.com/en/">
+        <a
+          href="https://www.java.com/en/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-java-plain colored skills"></i>
         </a>
-        <a href="https://www.cplusplus.com/">
+        <a href="https://ocaml.org/" target="_blank" rel="noopener noreferrer">
+          <i class="devicon-ocaml-plain colored skills"></i>
+        </a>
+        <a
+          href="https://elixir-lang.org/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="devicon-elixir-plain colored skills"></i>
+        </a>
+        <a
+          href="https://www.golang.org"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="devicon-go-line colored skills"></i>
+        </a>
+        <a
+          href="https://www.python.org/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="devicon-python-plain colored skills"></i>
+        </a>
+        <a
+          href="https://www.cplusplus.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-cplusplus-plain colored skills"></i>
         </a>
-        <a href="https://www.tutorialspoint.com/cprogramming/index.htm">
+        <a
+          href="https://www.tutorialspoint.com/cprogramming/index.htm"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-c-plain colored skills"></i>
         </a>
       </div>
@@ -280,25 +342,52 @@
       </p>
       <span class="heading-4">Web Frameworks and Libraries</span>
       <div class="my-container">
-        <a href="https://expressjs.com">
+        <a
+          href="https://expressjs.com"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-express-original colored skills"></i>
         </a>
-        <a href="https://www.phoenixframework.org/">
+        <a
+          href="https://www.phoenixframework.org/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-phoenix-plain colored skills"></i>
         </a>
-        <a href="https://reactjs.org/">
+        <a
+          href="https://reactjs.org/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-react-original colored skills"></i>
         </a>
-        <a href="https://vuejs.org/">
+        <a href="https://vuejs.org/" target="_blank" rel="noopener noreferrer">
           <i class="devicon-vuejs-plain colored skills"></i>
         </a>
-        <a href="https://svelte.dev/">
+        <a href="https://svelte.dev/" target="_blank" rel="noopener noreferrer">
           <i class="devicon-svelte-plain colored skills"></i>
         </a>
-        <a href="https://getbootstrap.com/">
+        <a
+          href="https://getbootstrap.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-bootstrap-plain colored skills"></i>
         </a>
-        <a href="https://material-ui.com/">
+        <a
+          href="https://tailwindcss.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="devicon-tailwindcss-plain colored skills"></i>
+        </a>
+        <a
+          href="https://material-ui.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-materialui-plain colored skills"></i>
         </a>
       </div>
