feat: add aws in skills section

--- a/index.html
+++ b/index.html
@@ -413,6 +413,13 @@
       </p>
       <span class="heading-4">Others</span>
       <div class="my-container">
+        <a
+          href="http://aws.amazon.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i class="devicon-amazonwebservices-original colored skills"></i>
+        </a>
         <a href="https://en.wikipedia.org/wiki/Shell_script">
           <i class="devicon-bash-plain colored skills"></i>
         </a>
