fix: add spacing between company' logos

--- a/index.html
+++ b/index.html
@@ -141,31 +141,29 @@
         developing their consumer and merchant portals. Back in BCIT, I also had
         the chance to work on two Industry-Sponsored Student Projects.
       </p>
-      <div class="container">
-        <div class="my-container flex-gap-10px">
-          <a
-            href="http://aws.amazon.com"
-            target="_blank"
-            rel="noopener noreferrer"
-          >
-            <i
-              class="devicon-amazonwebservices-plain-wordmark colored companies"
-            ></i>
-          </a>
+      <div class="my-container companies-spacer">
+        <a
+          href="http://aws.amazon.com"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <i
+            class="devicon-amazonwebservices-plain-wordmark colored companies"
+          ></i>
+        </a>
 
-          <a
-            href="http://gratifypay.com"
-            target="_blank"
-            rel="noopener noreferrer"
-            class="align-self-center"
-          >
-            <img
-              src="./images/gratify-logo.png"
-              alt="Gratify Pay's logo"
-              class="gratify-logo"
-            />
-          </a>
-        </div>
+        <a
+          href="http://gratifypay.com"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="align-self-center"
+        >
+          <img
+            src="./images/gratify-logo.png"
+            alt="Gratify Pay's logo"
+            class="gratify-logo"
+          />
+        </a>
       </div>
     </section>
 
