fix: make rest of the links open in new tab

--- a/index.html
+++ b/index.html
@@ -391,16 +391,32 @@
       </div>
       <span class="heading-4">Databases*</span>
       <div class="my-container">
-        <a href="https://www.postgresql.org/">
+        <a
+          href="https://www.postgresql.org/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-postgresql-plain colored skills"></i>
         </a>
-        <a href="https://www.mysql.com/">
+        <a
+          href="https://www.mysql.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-mysql-plain colored skills"></i>
         </a>
-        <a href="https://www.microsoft.com/en-ca/sql-server/sql-server-2019">
+        <a
+          href="https://www.microsoft.com/en-ca/sql-server/sql-server-2019"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-microsoftsqlserver-plain colored skills"></i>
         </a>
-        <a href="https://firebase.google.com/">
+        <a
+          href="https://firebase.google.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-firebase-plain colored skills"></i>
         </a>
       </div>
@@ -418,19 +434,39 @@
         >
           <i class="devicon-amazonwebservices-original colored skills"></i>
         </a>
-        <a href="https://en.wikipedia.org/wiki/Shell_script">
+        <a
+          href="https://en.wikipedia.org/wiki/Shell_script"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-bash-plain colored skills"></i>
         </a>
-        <a href="https://www.digitalocean.com/">
+        <a
+          href="https://www.digitalocean.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-digitalocean-plain colored skills"></i>
         </a>
-        <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5">
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-html5-plain colored skills"></i>
         </a>
-        <a href="https://developer.mozilla.org/en-US/docs/Web/CSS">
+        <a
+          href="https://developer.mozilla.org/en-US/docs/Web/CSS"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-css3-plain colored skills"></i>
         </a>
-        <a href="https://git-scm.com/">
+        <a
+          href="https://git-scm.com/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
           <i class="devicon-git-plain colored skills"></i>
         </a>
       </div>
