fix: remove open to new opportunity

--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
           target="_blank"
           rel="noopener noreferrer"
           >@aws</a
-        >. Though I'm open to new opportunities, so feel free to reach out to me
-        :D. Here's my <a href="./resume.pdf">resume</a>.
+        >. Here's my <a href="./resume.pdf">resume</a>.
       </p>
     </section>
 
