feat: add dynamodb

--- a/index.html
+++ b/index.html
@@ -412,6 +412,17 @@
           <i class="devicon-microsoftsqlserver-plain colored skills"></i>
         </a>
         <a
+          href="https://aws.amazon.com/dynamodb/"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img
+            src="./images/dynamodb.svg"
+            alt="dynamodb logo"
+            class="skills-img"
+          />
+        </a>
+        <a
           href="https://firebase.google.com/"
           target="_blank"
           rel="noopener noreferrer"
