fix: change gratify logo to svg

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           class="align-self-center"
         >
           <img
-            src="./images/gratify-logo.png"
+            src="./images/gratify-logo.svg"
             alt="Gratify Pay's logo"
             class="gratify-logo"
           />
